--- a/myhpi/polls/templates/polls/poll_list.html
+++ b/myhpi/polls/templates/polls/poll_list.html
@@ -4,9 +4,7 @@
 
 {% block content %}
     <h1 class="page-title">
-        <span class="underline">
-            {{ page.title }}
-        </span>
+        <span class="underline">{{ page.title }}</span>
     </h1>
     <table class="table table-striped">
         <thead>
@@ -14,13 +12,16 @@
                 <th>{% translate "Title" %}</th>
                 <th>{% translate "Voting period" %}</th>
             </tr>
-            <tbody>
-                {% for poll in poll_list %}
-                    <tr>
-                        <td><a href="{% pageurl poll %}">{{ poll.title }}</a></td>
-                        <td>{{ poll.start_date }} - {{ poll.end_date }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        </thead>
+        <tbody>
+            {% for poll in poll_list %}
+                <tr>
+                    <td>
+                        <a href="{% pageurl poll %}">{{ poll.title }}</a>
+                    </td>
+                    <td>{{ poll.start_date }} - {{ poll.end_date }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
