--- a/myhpi/templates/403.html
+++ b/myhpi/templates/403.html
@@ -10,7 +10,9 @@
 {% block content %}
     <h1>{% translate "Access denied" %}</h1>
 
-    <p>{% translate "Unfortunately you are not allowed to view this page. This might have one of the following reasons:" %}</p>
+    <p>
+        {% translate "Unfortunately you are not allowed to view this page. This might have one of the following reasons:" %}
+    </p>
 
     <ul class="pb-3">
         <li>{% translate "You are not logged in and are not accessing the page from the university network." %}</li>
