--- a/myhpi/templates/login.html
+++ b/myhpi/templates/login.html
@@ -2,9 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}
-    Login
-{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
     {% if user.is_authenticated %}
