--- a/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
+++ b/myhpi/tenca_django/templates/tenca_django/manage_subscription.html
@@ -7,8 +7,12 @@
 
 {% block breadcrumbs %}
     {% if request.user.is_authenticated %}
-        <li><span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;<a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing lists" %}</a></li>
-        <li><span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Manage subscription" %}</li>
+        <li>
+            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;<a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing lists" %}</a>
+        </li>
+        <li>
+            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Manage subscription" %}
+        </li>
     {% endif %}
 {% endblock %}
 
@@ -20,12 +24,17 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-group row">
-            <label class="col-md-3 col-form-label" for="id_email">
-                Email
-            </label>
+            <label class="col-md-3 col-form-label" for="id_email">Email</label>
             <div class="col-md-9">
                 {{ form.email }}
-                <!-- <input type="email" name="email" value="" class="form-control" placeholder="Email" title="" required="" id="id_email"> -->
+                <!-- <input type="email"
+        name="email"
+        value=""
+        class="form-control"
+        placeholder="Email"
+        title=""
+        required=""
+        id="id_email"> -->
             </div>
         </div>
         <div class="form-group">
