--- a/myhpi/templates/404.html
+++ b/myhpi/templates/404.html
@@ -6,5 +6,7 @@
 {% block content %}
     <h1>{% translate "Page not found" %}</h1>
 
-    <p>{% translate "The page you requested does not exist. Please check the URL or use the menu above to find your page." %}</p>
+    <p>
+        {% translate "The page you requested does not exist. Please check the URL or use the menu above to find your page." %}
+    </p>
 {% endblock %}
