--- a/myhpi/templates/500.html
+++ b/myhpi/templates/500.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Internal server error</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="myHPI Internal Server Error" />
     </head>
     <body>
         <h1>Internal server error</h1>
