--- a/myhpi/tenca_django/templates/tenca_django/action.html
+++ b/myhpi/tenca_django/templates/tenca_django/action.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Adjust membership" %}{% endblock %}
+{% block title %}
+    {% trans "Adjust membership" %}
+{% endblock %}
 
 {% block breadcrumbs %}
     {% if request.user.is_authenticated %}
-        <li><span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;<a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing lists" %}</a></li>
-        <li><span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Adjust membership" %}</li>
+        <li>
+            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;<a href="{% url "tenca_django:tenca_dashboard" %}">{% trans "Mailing lists" %}</a>
+        </li>
+        <li>
+            <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Adjust membership" %}
+        </li>
     {% endif %}
 {% endblock %}
 
