--- a/myhpi/tenca_django/templates/tenca_django/dashboard.html
+++ b/myhpi/tenca_django/templates/tenca_django/dashboard.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li><span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Mailing lists" %}</li>
+    <li>
+        <span class="fa fa-angle-right" aria-hidden="true"></span>&nbsp;{% trans "Mailing lists" %}
+    </li>
 {% endblock %}
 
 {% block content %}
@@ -15,19 +17,21 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label class="sr-only" for="id_list_name">
-                List name
-            </label>
+            <label class="sr-only" for="id_list_name">List name</label>
             <div class="input-group">
-                <input type="text" name="list_name" class="form-control" placeholder="List name" title="" required="" id="id_list_name">
+                <input type="text"
+                       name="list_name"
+                       class="form-control"
+                       placeholder="List name"
+                       title=""
+                       required=""
+                       id="id_list_name">
                 <div class="input-group-append">
-                    <span class="input-group-text">
-                        @lists.myhpi.de
-                    </span>
+                    <span class="input-group-text">@lists.myhpi.de</span>
                 </div>
             </div>
         </div>
-        <div class="form-group" style="padding-top: 10px">
+        <div class="form-group pt-2">
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </form>
@@ -39,17 +43,11 @@
             <div class="card mb-1">
                 <div class="card-body d-flex">
                     <div class="flex-fill">
-                        <a
-                            href="{% url "tenca_django:tenca_manage_subscription" hash_id %}">
-                            {{ list_id|fqdn_ize }}
-                        </a>
+                        <a href="{% url "tenca_django:tenca_manage_subscription" hash_id %}">{{ list_id|fqdn_ize }}</a>
                     </div>
                     {% if is_owner %}
-                        <div class="">
-                            <a
-                                href="{% url "tenca_django:tenca_manage_list" list_id %}">
-                                Manage List
-                            </a>
+                        <div>
+                            <a href="{% url "tenca_django:tenca_manage_list" list_id %}">Manage List</a>
                         </div>
                     {% endif %}
                 </div>
